<resources>
    <string name="app_name">Hello World</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_click_me">Click Me!</string>
    <string name="button_tutorial_one">Tutorial One</string>
    <string name="button_generate">Generate</string>

    <string name="text_style">Style</string>
    <string name="text_gravity">Gravity</string>
    <string name="text_normal">Normal</string>
    <string name="text_bold">Bold</string>
    <string name="text_italic">Italic</string>
    <string name="text_left">Left</string>
    <string name="text_right">Right</string>
    <string name="text_center">Center</string>
    <string name="text_typeintextandpressbutton">Type in Text and press the Button below</string>
</resources>
