<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/text_style" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/text_gravity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/rgStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_normal"/>
            <RadioButton
                android:id="@+id/rbBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_bold"/>
            <RadioButton
                android:id="@+id/rbItalic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/text_italic"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgGravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rbLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_left"/>
            <RadioButton
                android:id="@+id/rbCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_center"/>
            <RadioButton
                android:id="@+id/rbRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_right"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_typeintextandpressbutton"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_generate" />
</LinearLayout>